minor touch-ups

--- a/triangles.html
+++ b/triangles.html
@@ -19,7 +19,7 @@
             <input id="length2" type="text">
             <label for="side3">Side3:</label>
             <input id="length3" type="text">
-            <button type="submit" class="btn btn-success">Submit!</button>
+            <button type="submit" class="btn-xs btn-success btn-responsive">Submit!</button>
           </div>
         </form>
         </div>
